<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/padding_15dp"
        android:weightSum="2">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:visibility="gone"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_grey_btn"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="60dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:minHeight="40dp"
            android:layout_margin="@dimen/padding_5dp"
            android:text="@string/clear"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/getsign"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_grey_btn"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="60dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:minHeight="40dp"
            android:layout_margin="@dimen/padding_5dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_above="@+id/linearLayout2"
    android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:elevation="@dimen/padding_5dp"
            android:layout_margin="@dimen/padding_15dp"
            android:orientation="vertical" />

    </LinearLayout>


</RelativeLayout>