<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/layout_banking_detail"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btnEdit"
            android:visibility="visible">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_10dp"
                android:gravity="center_vertical"
                android:background="@drawable/bank_info_background"
                android:weightSum="1">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:padding="@dimen/padding_5dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_5dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_14"
                        android:textStyle="bold"
                        android:text="@string/bank_name"/>



                <TextView
                        android:id="@+id/tv_bank_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_5dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_12"
                        android:text=""/>


            </LinearLayout>



            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_weight="0.7"
                    android:orientation="vertical">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="center"
                        android:padding="@dimen/padding_5dp"
                        android:src="@drawable/ic_arrow_right"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_10dp"
                android:gravity="center_vertical"
                android:background="@drawable/bank_info_background"
                android:weightSum="1">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:padding="@dimen/padding_5dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_5dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_14"
                        android:textStyle="bold"
                        android:text="@string/account_number"/>



                <TextView
                        android:id="@+id/tv_account_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_5dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_12"
                        android:text=""/>


            </LinearLayout>



            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_weight="0.7"
                    android:orientation="vertical">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="center"
                        android:padding="@dimen/padding_5dp"
                        android:src="@drawable/ic_arrow_right"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_10dp"
                android:gravity="center_vertical"
                android:background="@drawable/bank_info_background"
                android:weightSum="1">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:padding="@dimen/padding_5dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_5dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_14"
                        android:textStyle="bold"
                        android:text="@string/routing_number_ach"/>



                <TextView
                        android:id="@+id/tv_rout_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_5dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_12"
                        android:text=""/>


            </LinearLayout>



            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_weight="0.7"
                    android:orientation="vertical">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="center"
                        android:padding="@dimen/padding_5dp"
                        android:src="@drawable/ic_arrow_right"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_edit_banking_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btnEdit"
            android:visibility="gone"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_5dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="bold"
                    android:text="@string/bank_name"/>



                <EditText
                    android:id="@+id/et_edit_bank_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_5dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_12"
                    android:text=""/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_5dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="bold"
                    android:text="@string/account_number"/>



                <EditText
                    android:id="@+id/et_edit_account_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_5dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_12"
                    android:text=""/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_5dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="bold"
                    android:text="@string/routing_number_ach"/>


                <EditText
                    android:id="@+id/et_edit_routing_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_5dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_12"
                    android:text=""/>


            </LinearLayout>

            <Button
                android:id="@+id/btnUpdateBankDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                style="@style/button"
                android:text="Update"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/padding_25dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            style="@style/button"
            android:text="Edit"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/padding_15dp"/>

    </RelativeLayout>
    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

</FrameLayout>